@@ -149,6 +149,21 @@ $counter = count($items);
 	</div><!--/ .about-author-->
 	<?php endif;?>
   </div>
+  
+  <?php
+    // Remove the "Add new comment" link on the teaser page or if the comment
+    // form is being displayed on the same page.
+    if ($teaser || !empty($content['comments']['comment_form'])) {
+      unset($content['links']['comment']['#links']['comment-add']);
+    }
+    // Only display the wrapper div if there are links.
+    $links = render($content['links']);
+    if ($links):
+  ?>
+    <div class="link-wrapper">
+      <?php print $links; ?>
+    </div>
+  <?php endif; ?>
 
   <?php print render($content['comments']); ?>
 </article>
